@@ -1,3 +1,8 @@
+1999-08-09  Alex Lancaster  <alex@santafe.edu>
+
+	* MousetrapBatchSwarm.m ([MousetrapBatchSwarm -buildObjects]): Use
+	convenience factory method for EZGraph creation.
+
 1999-08-08  Alex Lancaster  <alex@santafe.edu>
 
 	* MousetrapModelSwarm.m ([MousetrapModelSwarm -activateIn:]): Use
